# dobotcr5

./: Gripper_1.4_mod_s_vzduch_pris.STL  README.md  filtracia_pointcloudu.cpp  image_grab.cpp  main.cpp  main_normaly.cpp  scan_aulozenie.cpp  stututu
cr5_moveit/launch/: planning_context.launch
ruka_config/: CMakeLists.txt  package.xml
ruka_config/config/: cr5_robot.srdf  fake_controllers.yaml  gazebo_cr5_robot.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ruka_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group_kopirovane.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  ruka_moveit.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
ruka_description/: CMakeLists.txt  package.xml
ruka_description/config/: joint_names_CR5URDF.yaml
ruka_description/launch/: display.launch
ruka_description/urdf/: dobot_macro.xacro  gripper_bunka.xacro  gripper_macro.xacro
ruka_goal/: CMakeLists.txt  package.xml
ruka_goal/config/: gazebo_controllers.yaml
ruka_goal/launch/: dobot_gazebo_controllers.launch  dobot_world.launch  gazebo_basic.launch  posli_ruku_niekde.launch
ruka_goal/ruka_goal/launch/: dobot_gazebo_controllers.launch  gazebo_moveit.launch
ruka_goal/src/: posli_ruku_niekde.cpp
wenglor_driver/: CMakeLists.txt  package.xml
wenglor_driver/Sensor3D/include/: sensor3d.h  sensor3ddefines.h
wenglor_driver/launch/: test.launch
wenglor_driver/src/: copy2.cpp  main.cpp  pcd_write.cpp  pointcloud_zber.cpp
